Fix single mail links

--- a/src/main/resources/templates/fragment/mail.html
+++ b/src/main/resources/templates/fragment/mail.html
@@ -8,13 +8,13 @@
     </th:block>
     <th:block th:if="${media.getOverseerrId()}">
         <span> | </span>
-        <a th:href="${thymeleafService.getMediaOverseerrUrl(requirement.getMedia())}">
+        <a th:href="${thymeleafService.getMediaOverseerrUrl(media)}">
             <img alt="Overseerr logo" style="max-height: 15px; max-width: 15px;" src="https://raw.githubusercontent.com/sct/overseerr/develop/public/os_logo_filled.png">
         </a>
     </th:block>
-    <th:block th:if="${media.getOverseerrId()}">
+    <th:block th:if="${media.getPlexId()}">
         <span> | </span>
-        <a th:href="${thymeleafService.getMediaPlexUrl(requirement.getMedia())}">
+        <a th:href="${thymeleafService.getMediaPlexUrl(media)}">
             <img alt="Plex logo" style="max-height: 15px; max-width: 15px;" src="https://plexdeleter.ds920.rakambda.fr/static/plex.svg">
         </a>
     </th:block>
