--- a/src/main/resources/templates/admin/media/soon-deleted.html
+++ b/src/main/resources/templates/admin/media/soon-deleted.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html th:lang="${#locale.language}" xmlns:th="https://www.thymeleaf.org">
 <head>
     <title th:text="#{web.navbar.admin.media.list-soon-deleted}"></title>
     <th:block th:replace="~{fragment/common-head::common-head}"></th:block>
