--- a/src/main/resources/templates/auth/error.html
+++ b/src/main/resources/templates/auth/error.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title th:text="#{web.auth.login-error}"></title>
     <th:block th:replace="~{fragment/common-head::common-head}"></th:block>
