--- a/src/main/resources/templates/auth/plex.html
+++ b/src/main/resources/templates/auth/plex.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
+<html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org" data-bs-theme="auto">
 <head>
     <title th:text="#{web.auth.login}"></title>
     <th:block th:replace="~{fragment/common-head::common-head}"></th:block>
