--- a/src/main/resources/templates/fragment/common-head.html
+++ b/src/main/resources/templates/fragment/common-head.html
@@ -3,8 +3,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link th:href="@{~/static/styles/base.css}" rel="stylesheet"/>
     <link th:href="@{~/static/favicon.png}" rel="icon" type="image/png"/>
+    <script th:src="@{~/static/scripts/theme-switcher.js}"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
           crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 </th:block>
