--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -3,6 +3,7 @@
 <head>
     <title th:text="#{web.navbar.media-list}"></title>
     <th:block th:replace="~{fragment/common-head::common-head}"></th:block>
+    <script th:src="@{~/static/scripts/media-actions.js}"></script>
 </head>
 <body>
 <div th:replace="~{fragment/navbar.html::navbar}"></div>
@@ -80,13 +81,13 @@
                     <div class="m-1" th:if="${requirement.getMedia().isCompletable()}">
                         <form th:action="@{~/api/user/media-requirement/complete}" method="post">
                             <input type="hidden" name="media" class="form-control" th:value="${requirement.getMedia().getId()}"/>
-                            <input type="submit" th:value="#{web.media-list.table.action.complete}" class="btn btn-success btn-sm"/>
+                            <input type="submit" th:value="#{web.media-list.table.action.complete}" class="btn btn-success btn-sm media-action-button"/>
                         </form>
                     </div>
                     <div class="m-1">
                         <form th:action="@{~/api/user/media-requirement/abandon}" method="post">
                             <input type="hidden" name="media" class="form-control" th:value="${requirement.getMedia().getId()}"/>
-                            <input type="submit" th:value="#{web.media-list.table.action.abandon}" class="btn btn-danger btn-sm"/>
+                            <input type="submit" th:value="#{web.media-list.table.action.abandon}" class="btn btn-danger btn-sm media-action-button"/>
                         </form>
                     </div>
                 </div>
