--- a/src/main/resources/templates/mail/media-added.html
+++ b/src/main/resources/templates/mail/media-added.html
@@ -43,5 +43,6 @@
         </div>
     </div>
 </div>
+<th:block th:replace="~{fragment/mail::footer(thymeleafService=${thymeleafService})}"></th:block>
 </body>
 </html>
