--- a/src/main/resources/templates/mail/watchlist.html
+++ b/src/main/resources/templates/mail/watchlist.html
@@ -31,5 +31,6 @@
         </ul>
     </div>
 </div>
+<th:block th:replace="~{fragment/mail::footer(thymeleafService=${thymeleafService})}"></th:block>
 </body>
 </html>
