--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -79,13 +79,13 @@
             <td>
                 <div class="d-flex flex-row justify-content-center align-items-center">
                     <div class="m-1" th:if="${requirement.getMedia().isCompletable()}">
-                        <form th:action="@{~/api/user/media-requirement/complete}" method="post">
+                        <form th:action="@{~/api/user/media-requirement/complete}" onsubmit="return onMediaActionFormSubmit();" method="post">
                             <input type="hidden" name="media" class="form-control" th:value="${requirement.getMedia().getId()}"/>
                             <input type="submit" th:value="#{web.media-list.table.action.complete}" class="btn btn-success btn-sm media-action-button"/>
                         </form>
                     </div>
                     <div class="m-1">
-                        <form th:action="@{~/api/user/media-requirement/abandon}" method="post">
+                        <form th:action="@{~/api/user/media-requirement/abandon}" onsubmit="return onMediaActionFormSubmit();" method="post">
                             <input type="hidden" name="media" class="form-control" th:value="${requirement.getMedia().getId()}"/>
                             <input type="submit" th:value="#{web.media-list.table.action.abandon}" class="btn btn-danger btn-sm media-action-button"/>
                         </form>
