--- a/src/main/resources/templates/mail/media-added.html
+++ b/src/main/resources/templates/mail/media-added.html
@@ -7,6 +7,14 @@
 <body>
 <div class="container text-center">
     <div class="d-flex flex-column justify-content-center">
+        <div th:if="${suggestAddRequirementId}" class="d-flex flex-row justify-content-center align-items-center mb-2">
+            <div class="m-1">
+                <form th:action="@{~/api/user/media-requirement/add}" method="post">
+                    <input type="hidden" name="media" class="form-control" th:value="${suggestAddRequirementId}"/>
+                    <input type="submit" th:value="#{mail.media.available.body.actions.requirement.add}" class="btn btn-success btn-sm media-action-button"/>
+                </form>
+            </div>
+        </div>
         <div th:if="${mediaPosterResourceName}">
             <img th:src="|cid:${mediaPosterResourceName}|" class="img-fluid rounded" alt="Media poster">
         </div>
