--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -8,93 +8,7 @@
 <body>
 <div th:replace="~{fragment/navbar.html::navbar}"></div>
 <div>
-    <table class="table table-striped table-bordered table-hover align-middle text-center">
-        <thead class="thead-light">
-        <tr>
-            <th:block sec:authorize="hasRole('ROLE_ADMIN')">
-                <th scope="col" th:text="#{web.media-list.table.id}"/>
-            </th:block>
-            <th scope="col" th:text="#{web.media-list.table.type}"/>
-            <th scope="col" th:text="#{web.media-list.table.name}"/>
-            <th scope="col" th:text="#{web.media-list.table.season}"/>
-            <th scope="col" th:text="#{web.media-list.table.episodes}"/>
-            <th scope="col" th:text="#{web.media-list.table.watched}"/>
-            <th scope="col" th:text="#{web.media-list.table.availability}"/>
-            <th scope="col" th:text="#{web.media-list.table.links}"/>
-            <th scope="col" th:text="#{web.media-list.table.action}"/>
-        </tr>
-        </thead>
-        <tbody class="table-group-divider">
-        <tr th:each="requirement : ${requirements}" th:class="${thymeleafService.getTableColorClass(requirement.getMedia())}">
-            <th:block sec:authorize="hasRole('ROLE_ADMIN')">
-                <td th:text="${requirement.getMedia().getId()}"></td>
-            </th:block>
-            <td>
-                <div class="d-flex flex-row justify-content-center align-items-center col-auto">
-                    <svg class="m-1" height="20" width="20">
-                        <image th:xlink:href="@{~/static/__${requirement.getMedia().getType().getIcon()}__}" height="20" width="20"/>
-                    </svg>
-                    <span class="m-1" th:text="#{${requirement.getMedia().getType().getLocalizationKey()}}"></span>
-                </div>
-            </td>
-            <td th:text="${requirement.getMedia().getName()}"></td>
-            <td th:text="${requirement.getMedia().getIndex()}"></td>
-            <td th:text="${requirement.getMedia().getAvailablePartsCount() + ' / ' + requirement.getMedia().getPartsCount()}"></td>
-            <td th:text="${requirement.getWatchedCount() + ' / ' + requirement.getMedia().getPartsCount()}"></td>
-            <td th:text="#{${requirement.getMedia().getAvailability().getLocalizationKey()}}"></td>
-            <td>
-                <div class="d-flex flex-row justify-content-center align-items-center">
-                    <div th:if="${requirement.getMedia().getOverseerrId()}" class="m-1">
-                        <a title="Overseerr" th:href="${thymeleafService.getMediaOverseerrUrl(requirement.getMedia())}" th:target="_blank">
-                            <svg class="m-1" height="20" width="20">
-                                <image th:xlink:href="@{~/static/overseerr.svg}" height="20" width="20"/>
-                            </svg>
-                        </a>
-                    </div>
-                    <div th:if="${requirement.getMedia().getPlexId()}" class="m-1">
-                        <a title="Radarr" th:href="${thymeleafService.getMediaPlexUrl(requirement.getMedia())}" th:target="_blank">
-                            <svg class="m-1" height="20" width="20">
-                                <image th:xlink:href="@{~/static/plex.svg}" height="20" width="20"/>
-                            </svg>
-                        </a>
-                    </div>
-                    <th:block sec:authorize="hasRole('ROLE_ADMIN')">
-                        <div th:if="${requirement.getMedia().getSonarrSlug()}" class="m-1">
-                            <a title="Sonarr" th:href="${thymeleafService.getMediaSonarrUrl(requirement.getMedia())}" th:target="_blank">
-                                <svg class="m-1" height="20" width="20">
-                                    <image th:xlink:href="@{~/static/sonarr.svg}" height="20" width="20"/>
-                                </svg>
-                            </a>
-                        </div>
-                        <div th:if="${requirement.getMedia().getRadarrSlug()}" class="m-1">
-                            <a title="Radarr" th:href="${thymeleafService.getMediaRadarrUrl(requirement.getMedia())}" th:target="_blank">
-                                <svg class="m-1" height="20" width="20">
-                                    <image th:xlink:href="@{~/static/radarr.svg}" height="20" width="20"/>
-                                </svg>
-                            </a>
-                        </div>
-                    </th:block>
-                </div>
-            </td>
-            <td>
-                <div class="d-flex flex-row justify-content-center align-items-center">
-                    <div class="m-1" th:if="${requirement.getMedia().isCompletable()}">
-                        <form th:action="@{~/api/user/media-requirement/complete}" onsubmit="return onMediaActionFormSubmit();" method="post">
-                            <input type="hidden" name="media" class="form-control" th:value="${requirement.getMedia().getId()}"/>
-                            <input type="submit" th:value="#{web.media-list.table.action.complete}" class="btn btn-success btn-sm media-action-button"/>
-                        </form>
-                    </div>
-                    <div class="m-1">
-                        <form th:action="@{~/api/user/media-requirement/abandon}" onsubmit="return onMediaActionFormSubmit();" method="post">
-                            <input type="hidden" name="media" class="form-control" th:value="${requirement.getMedia().getId()}"/>
-                            <input type="submit" th:value="#{web.media-list.table.action.abandon}" class="btn btn-danger btn-sm media-action-button"/>
-                        </form>
-                    </div>
-                </div>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <th:block th:replace="~{fragment/requirement-list::media-list(requirements=${requirements}, thymeleafService=${thymeleafService}, displayUsers=${displayUsers})}"></th:block>
 </div>
 </body>
 </html>
