--- a/src/main/resources/templates/mail/media-added.html
+++ b/src/main/resources/templates/mail/media-added.html
@@ -45,9 +45,15 @@
             <h4 class="text-primary" th:text="#{mail.media.available.body.subtitles}"></h4>
             <div th:each="mediaSubtitle : ${mediaSubtitles}" th:text="${mediaSubtitle}"/>
         </div>
-        <div class="mb-2" th:unless="${#lists.isEmpty(mediaActors)}">
-            <h4 class="text-primary" th:text="#{mail.media.available.body.actors}"></h4>
-            <div th:each="mediaActor : ${mediaActors}" th:text="${mediaActor}"/>
+        <div class="mb-2" th:unless="${#lists.isEmpty(mediaSubtitles)}">
+            <h4 class="text-primary" th:text="#{mail.media.available.body.subtitles}"></h4>
+            <div th:each="mediaSubtitle : ${mediaSubtitles}" th:text="${mediaSubtitle}"/>
+        </div>
+        <div class="mb-2" th:unless="${#lists.isEmpty(metadataProvidersInfo)}">
+            <h4 class="text-primary" th:text="#{mail.media.available.body.external.links}"></h4>
+            <div th:each="metadataProviderInfo : ${metadataProvidersInfo}">
+                <a th:href="${metadataProviderInfo.url()}" th:text="${metadataProviderInfo.name()}"/>
+            </div>
         </div>
     </div>
 </div>
