--- a/src/main/resources/templates/admin/media/soon-deleted.html
+++ b/src/main/resources/templates/admin/media/soon-deleted.html
@@ -16,7 +16,7 @@
             <th scope="col" th:text="#{web.media-list.table.season}"/>
             <th scope="col" th:text="#{web.media-list.table.episodes}"/>
             <th scope="col" th:text="#{web.media-list.table.availability}"/>
-            <th scope="col">Overseerr</th>
+            <th scope="col" th:text="#{web.media-list.table.links}"/>
         </tr>
         </thead>
         <tbody class="table-group-divider">
@@ -47,6 +47,20 @@
                         <a title="Radarr" th:href="${thymeleafService.getMediaPlexUrl(media)}" th:target="_blank">
                             <svg class="m-1" height="20" width="20">
                                 <image th:xlink:href="@{~/static/plex.svg}" height="20" width="20"/>
+                            </svg>
+                        </a>
+                    </div>
+                    <div th:if="${media.getTmdbId()}" class="m-1">
+                        <a title="Tmdb" th:href="${thymeleafService.getMediaTmdbUrl(media)}" th:target="_blank">
+                            <svg class="m-1" height="20" width="20">
+                                <image th:xlink:href="@{~/static/tmdb.svg}" height="20" width="20"/>
+                            </svg>
+                        </a>
+                    </div>
+                    <div th:if="${media.getTvdbId()}" class="m-1">
+                        <a title="Tvdb" th:href="${thymeleafService.getMediaTvdbUrl(media)}" th:target="_blank">
+                            <svg class="m-1" height="20" width="20">
+                                <image th:xlink:href="@{~/static/tvdb.svg}" height="20" width="20"/>
                             </svg>
                         </a>
                     </div>
