--- a/src/main/resources/templates/fragment/requirement-list.html
+++ b/src/main/resources/templates/fragment/requirement-list.html
@@ -56,6 +56,20 @@
                             </svg>
                         </a>
                     </div>
+                    <div th:if="${requirement.getMedia().getTmdbId()}" class="m-1">
+                        <a title="Tmdb" th:href="${thymeleafService.getMediaTmdbUrl(requirement.getMedia())}" th:target="_blank">
+                            <svg class="m-1" height="20" width="20">
+                                <image th:xlink:href="@{~/static/tmdb.svg}" height="20" width="20"/>
+                            </svg>
+                        </a>
+                    </div>
+                    <div th:if="${requirement.getMedia().getTvdbId()}" class="m-1">
+                        <a title="Tvdb" th:href="${thymeleafService.getMediaTvdbUrl(requirement.getMedia())}" th:target="_blank">
+                            <svg class="m-1" height="20" width="20">
+                                <image th:xlink:href="@{~/static/tvdb.svg}" height="20" width="20"/>
+                            </svg>
+                        </a>
+                    </div>
                     <th:block sec:authorize="hasRole('ROLE_ADMIN')">
                         <div th:if="${requirement.getMedia().getSonarrSlug()}" class="m-1">
                             <a title="Sonarr" th:href="${thymeleafService.getMediaSonarrUrl(requirement.getMedia())}" th:target="_blank">
