--- a/src/main/resources/templates/fragment/requirement-list.html
+++ b/src/main/resources/templates/fragment/requirement-list.html
@@ -12,8 +12,9 @@
             <th scope="col" th:text="#{web.media-list.table.name}"/>
             <th scope="col" th:text="#{web.media-list.table.season}"/>
             <th scope="col" th:text="#{web.media-list.table.episodes}"/>
-            <th scope="col" th:text="#{web.media-list.table.watched}"/>
+            <th scope="col" th:text="#{web.media-list.table.downloaded}"/>
             <th scope="col" th:text="#{web.media-list.table.availability}"/>
+            <th scope="col" th:text="#{web.media-list.table.watched}"/>
             <th scope="col" th:text="#{web.media-list.table.links}"/>
             <th scope="col" th:text="#{web.media-list.table.action}"/>
         </tr>
@@ -38,8 +39,8 @@
             <td th:text="${requirement.getMedia().getName()}"></td>
             <td th:text="${requirement.getMedia().getIndex()}"></td>
             <td th:text="${requirement.getMedia().getAvailablePartsCount() + ' / ' + requirement.getMedia().getPartsCount()}"></td>
-            <td th:text="${requirement.getWatchedCount() + ' / ' + requirement.getMedia().getPartsCount()}"></td>
             <td th:text="#{${requirement.getMedia().getAvailability().getLocalizationKey()}}"></td>
+            <td th:text="${requirement.getWatchedCount() + ' / ' + requirement.getMedia().getPartsCount()}"></td>
             <td>
                 <div class="d-flex flex-row justify-content-center align-items-center">
                     <div th:if="${requirement.getMedia().getOverseerrId()}" class="m-1">
