--- a/src/main/resources/templates/admin/media/soon-deleted.html
+++ b/src/main/resources/templates/admin/media/soon-deleted.html
@@ -44,7 +44,7 @@
                         </a>
                     </div>
                     <div th:if="${media.getPlexId()}" class="m-1">
-                        <a title="Radarr" th:href="${thymeleafService.getMediaPlexUrl(media)}" th:target="_blank">
+                        <a title="Plex" th:href="${thymeleafService.getMediaPlexUrl(media)}" th:target="_blank">
                             <svg class="m-1" height="20" width="20">
                                 <image th:xlink:href="@{~/static/plex.svg}" height="20" width="20"/>
                             </svg>
