--- a/src/main/resources/templates/admin/media/soon-deleted.html
+++ b/src/main/resources/templates/admin/media/soon-deleted.html
@@ -7,82 +7,7 @@
 <body>
 <div th:replace="~{fragment/navbar.html::navbar}"></div>
 <div>
-    <table class="table table-striped table-bordered table-hover align-middle text-center">
-        <thead class="thead-light">
-        <tr>
-            <th scope="col" th:text="#{web.media-list.table.id}"/>
-            <th scope="col" th:text="#{web.media-list.table.type}"/>
-            <th scope="col" th:text="#{web.media-list.table.name}"/>
-            <th scope="col" th:text="#{web.media-list.table.season}"/>
-            <th scope="col" th:text="#{web.media-list.table.episodes}"/>
-            <th scope="col" th:text="#{web.media-list.table.availability}"/>
-            <th scope="col" th:text="#{web.media-list.table.links}"/>
-        </tr>
-        </thead>
-        <tbody class="table-group-divider">
-        <tr th:each="media : ${medias}">
-            <td th:text="${media.getId()}"></td>
-            <td>
-                <div class="d-flex flex-row justify-content-center align-items-center col-auto">
-                    <svg class="m-1" height="20" width="20">
-                        <image th:xlink:href="@{~/static/__${media.getType().getIcon()}__}" height="20" width="20"/>
-                    </svg>
-                    <span class="m-1" th:text="#{${media.getType().getLocalizationKey()}}"></span>
-                </div>
-            </td>
-            <td th:text="${media.getName()}"></td>
-            <td th:text="${media.getIndex()}"></td>
-            <td th:text="${media.getPartsCount()}"></td>
-            <td th:text="#{${media.getStatus().getLocalizationKey()}}"></td>
-            <td>
-                <div class="d-flex flex-row justify-content-center align-items-center">
-                    <div th:if="${media.getOverseerrId()}" class="m-1">
-                        <a th:href="${thymeleafService.getMediaOverseerrUrl(media)}" th:target="_blank">
-                            <svg class="m-1" height="20" width="20">
-                                <image th:xlink:href="@{~/static/overseerr.svg}" height="20" width="20"/>
-                            </svg>
-                        </a>
-                    </div>
-                    <div th:if="${media.getPlexId()}" class="m-1">
-                        <a title="Plex" th:href="${thymeleafService.getMediaPlexUrl(media)}" th:target="_blank">
-                            <svg class="m-1" height="20" width="20">
-                                <image th:xlink:href="@{~/static/plex.svg}" height="20" width="20"/>
-                            </svg>
-                        </a>
-                    </div>
-                    <div th:if="${media.getTmdbId()}" class="m-1">
-                        <a title="Tmdb" th:href="${thymeleafService.getMediaTmdbUrl(media)}" th:target="_blank">
-                            <svg class="m-1" height="20" width="20">
-                                <image th:xlink:href="@{~/static/tmdb.svg}" height="20" width="20"/>
-                            </svg>
-                        </a>
-                    </div>
-                    <div th:if="${media.getTvdbId()}" class="m-1">
-                        <a title="Tvdb" th:href="${thymeleafService.getMediaTvdbUrl(media)}" th:target="_blank">
-                            <svg class="m-1" height="20" width="20">
-                                <image th:xlink:href="@{~/static/tvdb.svg}" height="20" width="20"/>
-                            </svg>
-                        </a>
-                    </div>
-                    <div th:if="${media.getSonarrSlug()}" class="m-1">
-                        <a title="Sonarr" th:href="${thymeleafService.getMediaSonarrUrl(media)}" th:target="_blank">
-                            <svg class="m-1" height="20" width="20">
-                                <image th:xlink:href="@{~/static/sonarr.svg}" height="20" width="20"/>
-                            </svg>
-                        </a>
-                    </div>
-                    <div th:if="${media.getRadarrSlug()}" class="m-1">
-                        <a title="Radarr" th:href="${thymeleafService.getMediaRadarrUrl(media)}" th:target="_blank">
-                            <svg class="m-1" height="20" width="20">
-                                <image th:xlink:href="@{~/static/radarr.svg}" height="20" width="20"/>
-                            </svg>
-                        </a>
-                    </div>
-                </div>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <th:block th:replace="~{fragment/media-list::media-list(medias=${medias}, thymeleafService=${thymeleafService})}"></th:block>
 </div>
 </body>
 </html>
