--- a/src/main/resources/templates/fragment/requirement-list.html
+++ b/src/main/resources/templates/fragment/requirement-list.html
@@ -1,4 +1,4 @@
-<th:block th:fragment="media-list" xmlns:sec="http://www.w3.org/1999/xhtml">
+<th:block th:fragment="requirement-list" xmlns:sec="http://www.w3.org/1999/xhtml">
     <table class="table table-striped table-bordered table-hover align-middle text-center">
         <thead class="thead-light">
         <tr>
