--- a/src/main/resources/templates/fragment/navbar.html
+++ b/src/main/resources/templates/fragment/navbar.html
@@ -8,6 +8,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" th:href="@{~/}" th:text="#{web.navbar.media-list}"></a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{~/user/medias}" th:text="#{web.navbar.media-add}"></a></li>
                     <th:block sec:authorize="hasRole('ROLE_ADMIN')">
                         <li class="nav-item"><a class="nav-link text-danger" th:href="@{~/admin/media-requirement/add}" th:text="#{web.navbar.admin.requirement.add}"></a></li>
                         <li class="nav-item"><a class="nav-link text-danger" th:href="@{~/admin/media-requirement/list}" th:text="#{web.navbar.admin.requirement.list}"></a></li>
