Add stacktrace to error page

--- a/src/main/resources/templates/api/errorLocalized.html
+++ b/src/main/resources/templates/api/errorLocalized.html
@@ -1,1 +1,1 @@
-<th:block th:replace="~{fragment/error::error(errorMessage=__${expression}__)}"></th:block>
+<th:block th:replace="~{fragment/error::error(errorMessage=__${expression}__, errorTrace=${errorTrace})}"></th:block>
