--- a/src/main/resources/templates/fragment/error.html
+++ b/src/main/resources/templates/fragment/error.html
@@ -9,6 +9,14 @@
     <div class="d-flex justify-content-center align-items-center vh-100 text-center">
         <div class="alert alert-danger d-flex flex-column align-items-center" role="alert">
             <span class="fs-1" th:text="${errorMessage}"></span>
+            <th:block sec:authorize="hasRole('ROLE_ADMIN')">
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseTrace" role="button" aria-expanded="false" aria-controls="collapseTrace">
+                    Show StackTrace
+                </a>
+                <div class="collapse" id="collapseTrace">
+                    <div class="card card-body" th:text="${errorTrace}"></div>
+                </div>
+            </th:block>
             <a th:href="@{~/}" role="button" class="btn btn-warning" th:text="#{web.api.back}"></a>
         </div>
     </div>
