--- a/src/main/resources/templates/fragment/mail.html
+++ b/src/main/resources/templates/fragment/mail.html
@@ -35,8 +35,8 @@
 </th:block>
 
 <th:block th:fragment="footer">
-    <footer class="mt-3 bg-light text-center">
-        <a class="text-dark" th:href="${thymeleafService.getOwnUrl()}" th:text="#{mail.footer.app-link}"></a>
+    <footer class="mt-3 text-center">
+        <a th:href="${thymeleafService.getOwnUrl()}" th:text="#{mail.footer.app-link}"></a>
         <div class="mb-2"></div>
     </footer>
 </th:block>
